--- a/css/main.css
+++ b/css/main.css
@@ -5,25 +5,36 @@ line-height: 1.5;
 header, nav, main, footer {
     margin: 1.25rem auto;
     max-width: 760px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 header, footer {
     background-color: rgb(25, 72, 94);
     color: white;
     text-align: center;
+    border-radius: 2em;
 }
 header {
-    padding: 1rem;
+    padding: .75rem;
 }
 header img {
     float: right;
-    margin: 10px;
-    border: 1px solid black;
-   
+    transform: scale(0.80);
+    border-radius: 8px;
+    box-shadow: 0px 0px 30px black; 
     
 }
 footer {
-    padding: .75rem;
+    padding: .7rem 1.25rem;
+}
+h2 {
+    border-bottom: 1px solid black;
+    max-width: 760px;
 }
 footer a  {
     Color: white;
+    text-decoration: underline;
+}
+#updated {
+    margin: -5px 0;
+    color: rgb(156, 230, 240);
 }
